fix: [PL-20844]: Fixed alignment and visibility-condition issues of Identifier-error (#552)
* fix: [PL-20844]: FormError now accepts a className

* fix: [PL-20844]: fixed alignment and visibility-condition issues of Identifier-error

* fix: [PL-20844]: review comments: added pre-defined layout spacing

--- a/src/components/InputWithIdentifier/InputWithIdentifier.css
+++ b/src/components/InputWithIdentifier/InputWithIdentifier.css
@@ -14,4 +14,8 @@
     text-overflow: ellipsis;
     color: var(--primary-7);
   }
+
+  .idError {
+    margin-top: calc(-1 * var(--spacing-small));
+  }
 }
